--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<h1>Indigo GIS Prototype</h1>
+<h1>Indigo GIS Prototyp</h1>
 <a href="IGIS-9_Variante-2.html?user_id=251?user_id=4830&active_guid=indigo">IGIS-9_Variante-2.html mit Beispiel ?user_id=4830&active_guid=indigo</a><br>
 <a href="IGIS-144.html?user_id=4830&active_guid=indigo">IGIS-144.html mit Beispiel ?user_id=4830&active_guid=indigo</a><br>
 <a href="IGIS-143.html?stat_code=BELB">IGIS-143.html mit Beispiel ?stat_code=[BELB BELM]</a><br>
