--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 <body>
 <h1>Indigo GIS Prototyp</h1>
-<a href="IGIS-9_Variante-2.html?user_id=251?user_id=4830&active_guid=indigo">IGIS-9_Variante-2.html mit Beispiel ?user_id=4830&active_guid=indigo</a><br>
+<a href="IGIS-9.html?user_id=4830&active_guid=indigo">IGIS-9.html mit Beispiel ?user_id=4830&active_guid=indigo</a><br>
 <a href="IGIS-144.html?user_id=4830&active_guid=indigo">IGIS-144.html mit Beispiel ?user_id=4830&active_guid=indigo</a><br>
-<a href="IGIS-143.html?stat_code=BELB">IGIS-143.html mit Beispiel ?stat_code=[BELB BELM]</a><br>
+<a href="IGIS-143.html?stat_id=329734">IGIS-143.html mit Beispiel ?stat_id=[329734 423013]</a><br>
 </body>
 </html>
