igis.css referenced

--- a/IGIS-143.html
+++ b/IGIS-143.html
@@ -7,23 +7,8 @@
 <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no">
 <title>Indigo GIS IGIS-143</title>
 <link rel="stylesheet" href="https://js.arcgis.com/3.13/esri/css/esri.css">
-<style>
-body {
-    height: 280px;
-    width: 280px;
-    margin: 0;
-    padding: 0;
-    background-color: #FFF;
-    overflow: hidden;
-    font-family: "Trebuchet MS";
-}
-html, #map {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-</style>
+<!-- Indigo GIS CSS -->
+<link rel="stylesheet" type="text/css" href="https://stgeo01/indigo/igis.css"> <!-- warum geht es nicht mit HTTPS? -->
 <script src="https://js.arcgis.com/3.13/"></script>
 <script type="text/javascript" src="IGIS-143.js"></script>
 </head>
