--- a/IGIS-9.html
+++ b/IGIS-9.html
@@ -4,85 +4,23 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!--The viewport meta tag is used to improve the presentation and behavior of the samples
       on iOS devices-->
-<meta name="viewport"
-	content="initial-scale=1, maximum-scale=1,user-scalable=no">
+<meta name="viewport"	content="initial-scale=1, maximum-scale=1,user-scalable=no">
 <title>Indigo GIS</title>
-<link rel="stylesheet"
-	href="https://js.arcgis.com/3.13/dijit/themes/tundra/tundra.css">
-<link rel="stylesheet"
-	href="https://js.arcgis.com/3.13/esri/css/esri.css">
-
-<!-- für Map -->
-<style>
-html, body, #map, .map.container {
-	height: 100%;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	background-color: #FFF;
-	overflow: hidden;
-	font-family: "Trebuchet MS";
-}
-
-#legendDiv {
-	background-color: #fff;
-	position: absolute !important;
-	z-index: 99;
-	top: 10px;
-	right: 20px;
-}
-
-#messages {
-	background-color: #fff;
-	box-shadow: 0 0 5px #888;
-	font-size: 1.1em;
-	max-width: 15em;
-	padding: 0.5em;
-	position: absolute;
-	right: 20px;
-	top: 20px;
-	z-index: 40;
-}
-
-#search {
-	display: block;
-	position: absolute;
-	z-index: 2;
-	top: 20px;
-	left: 74px;
-}
-
-#basemapGallery {
-	display: block;
-	position: absolute;
-	z-index: 2;
-	top: 20px;
-	right: 20px;
-}
-</style>
-
+<link rel="stylesheet" href="https://js.arcgis.com/3.13/dijit/themes/tundra/tundra.css">
+<link rel="stylesheet" href="https://js.arcgis.com/3.13/esri/css/esri.css">
+<!-- Indigo GIS CSS -->
+<!--<link rel="stylesheet" type="text/css" href="https://stgeo01/indigo/igis.css"> <!-- warum geht es nicht mit HTTPS? -->
+<link rel="stylesheet" type="text/css" href="igis.css">
 <script src="https://js.arcgis.com/3.13/"></script>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript" src="IGIS-9.js"></script>
-
 </head>
 
 <body>
-	<div id="search"></div>
-	<div id="map"></div>
-
-	<div style="position: absolute; right: 20px; top: 10px; z-Index: 999;">
-		<div data-dojo-type="dijit/TitlePane"
-			data-dojo-props="title:'Switch Basemap', closable:false, open:false">
-			<div data-dojo-type="dijit/layout/ContentPane"
-				style="width: 380px; height: 280px; overflow: auto;">
-				<div id="basemapGallery"></div>
-			</div>
-		</div>
-	</div>
-
+  <div id="mapContainer">
+    <div id="map"></div>
+    <div id="search"></div>
+    <div id="BasemapToggle"></div>
+  </div>
 </body>
 </html>
